--- a/frontend/src/pages/LibroListPage.css
+++ b/frontend/src/pages/LibroListPage.css
@@ -123,3 +123,27 @@
   position: relative; 
   z-index: 10;
 }
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* Contenido del Modal */
+.modal-content {
+  background-color: var(--color-card-bg);
+  color: var(--color-text);
+  padding: 25px;
+  border-radius: 10px;
+  width: 90%;
+  max-width: 400px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  text-align: center;
+}
